--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,26 +6,7 @@
     tools:context=".ui.SettingsActivity"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_64"
-        android:background="@color/app_theme">
-        <ImageView
-            android:layout_width="@dimen/dp_22"
-            android:layout_height="@dimen/dp_22"
-            android:src="@drawable/white_back"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_5"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="设置"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/sp_18"
-            android:layout_centerInParent="true"/>
-    </RelativeLayout>
-
+    <include layout="@layout/title_theme"/>
     <RelativeLayout
         android:id="@+id/at_settings_rl_head_pic"
         android:layout_width="match_parent"
@@ -186,16 +167,14 @@
             android:textColor="@color/text6"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp_12"/>
-
-
         <ImageView
+            android:id="@+id/ac_setting_iv_msg"
             android:layout_width="@dimen/dp_58"
             android:layout_height="@dimen/dp_28"
             android:layout_alignParentRight="true"
             android:src="@drawable/at_edit_address_not_selector"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/dp_12"/>
-
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
@@ -226,6 +205,7 @@
             android:layout_marginRight="@dimen/sp_12"/>
 
         <TextView
+            android:id="@+id/ac_setting_tv_cache"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/at_settings_go6"
