--- a/app/src/main/res/layout/activity_location_store.xml
+++ b/app/src/main/res/layout/activity_location_store.xml
@@ -7,38 +7,7 @@
     android:orientation="vertical"
     android:background="@android:color/white">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        android:background="@android:color/white">
-
-        <ImageView
-            android:layout_width="@dimen/dp_22"
-            android:layout_height="@dimen/dp_22"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_6"
-            android:src="@drawable/back"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="附近商家"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/sp_18"
-            android:textColor="@color/text3"
-            />
-
-        <TextView
-            android:id="@+id/at_location_store_tv_ruzhu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="立即入驻？"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/dp_12"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/app_theme"/>
-    </RelativeLayout>
+    <include layout="@layout/title"/>
 
     <View
         android:layout_width="match_parent"
