--- a/app/src/main/res/layout/activity_message_center.xml
+++ b/app/src/main/res/layout/activity_message_center.xml
@@ -6,26 +6,7 @@
     tools:context=".ui.MessageCenterActivity"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_64"
-        android:background="@color/app_theme">
-        <ImageView
-            android:layout_width="@dimen/dp_22"
-            android:layout_height="@dimen/dp_22"
-            android:src="@drawable/white_back"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_5"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="消息中心"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/sp_18"
-            android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
+    <include layout="@layout/title_theme"/>
 
     <RelativeLayout
         android:id="@+id/at_message_center_rl_system_message"
