--- a/app/src/main/res/layout/activity_sec_kill.xml
+++ b/app/src/main/res/layout/activity_sec_kill.xml
@@ -6,26 +6,7 @@
     android:background="@android:color/white"
     android:orientation="vertical">
     
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        android:background="@android:color/white">
-        
-        <ImageView
-            android:layout_width="@dimen/dp_22"
-            android:layout_height="@dimen/dp_22"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_6"
-            android:src="@drawable/back"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="限时秒杀"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/sp_18"
-            android:textColor="@color/text3" />
-    </RelativeLayout>
+    <include layout="@layout/title"/>
 
     <View
         android:layout_width="match_parent"
