--- a/app/src/main/res/layout/fragment_discover_supply.xml
+++ b/app/src/main/res/layout/fragment_discover_supply.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_155"
         android:orientation="vertical"
@@ -182,6 +182,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/fg_discoverSupply_ll_gong"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_40"
             android:orientation="horizontal"
@@ -241,17 +242,13 @@
             android:id="@+id/fg_discover_supply_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
         </android.support.v7.widget.RecyclerView>
-
-
     </LinearLayout>
     <LinearLayout
         android:id="@+id/fg_discover_supply_ll_need"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_40"
@@ -280,12 +277,10 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
             android:background="@color/background"></View>
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fg_discover_need_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
         </android.support.v7.widget.RecyclerView>
 
 
