--- a/app/src/main/res/layout/item_discover_supply.xml
+++ b/app/src/main/res/layout/item_discover_supply.xml
@@ -75,7 +75,7 @@
                 android:layout_marginLeft="@dimen/dp_10"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="@dimen/dp_4">
@@ -98,6 +98,14 @@
                 android:paddingRight="@dimen/dp_6"
                 android:paddingLeft="@dimen/dp_6"
                 android:layout_marginLeft="@dimen/dp_10"/>
+            <TextView
+                android:id="@+id/item_discover_supply_tv_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1.5km"
+                android:layout_marginLeft="@dimen/dp_80"
+                android:textColor="@color/text6"
+                android:textSize="@dimen/sp_12"/>
         </LinearLayout>
         
         <RelativeLayout
@@ -175,17 +183,10 @@
                 android:layout_marginRight="@dimen/dp_12"
                 android:layout_centerVertical="true"/>
         </RelativeLayout>
-
     </LinearLayout>
-    <TextView
-        android:id="@+id/item_discover_supply_tv_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1.5km"
-        android:textColor="@color/text6"
-        android:textSize="@dimen/sp_12"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="@dimen/dp_12"
-        android:layout_marginBottom="@dimen/dp_30"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:background="@color/line"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
