--- a/app/src/main/res/layout/item_my_bill_list.xml
+++ b/app/src/main/res/layout/item_my_bill_list.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40">
         <TextView
+            android:id="@+id/item_myBillList_tv_storeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="朝花夕拾"
@@ -19,6 +20,7 @@
             android:layout_marginLeft="@dimen/dp_12"/>
 
         <TextView
+            android:id="@+id/item_myBillList_tv_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="待支付"
@@ -39,33 +41,35 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_100">
         <ImageView
-            android:id="@+id/item_want_but_manager_pic"
+            android:id="@+id/item_myBillList_iv_goodsImg"
             android:layout_width="@dimen/dp_80"
             android:layout_height="@dimen/dp_80"
             android:src="@mipmap/ic_launcher"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp_12"/>
         <TextView
-            android:id="@+id/item_want_but_manager_tv_title"
+            android:id="@+id/item_myBillList_tv_goodsName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="韩国control眼部精华打底液隔离打底保湿水正品代购"
-            android:layout_toRightOf="@id/item_want_but_manager_pic"
+            android:layout_toRightOf="@id/item_myBillList_iv_goodsImg"
             android:layout_marginTop="@dimen/dp_12"
             android:layout_marginRight="@dimen/dp_13"
             android:layout_marginLeft="@dimen/dp_11"
             android:maxLines="2"/>
             <TextView
+                android:id="@+id/item_myBillList_tv_goodsPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="￥1560"
                 android:textSize="@dimen/sp_14"
                 android:textColor="@color/text6"
-                android:layout_alignLeft="@id/item_want_but_manager_tv_title"
-                android:layout_below="@id/item_want_but_manager_tv_title"
+                android:layout_alignLeft="@id/item_myBillList_tv_goodsName"
+                android:layout_below="@id/item_myBillList_tv_goodsName"
                 android:layout_marginTop="@dimen/dp_13"/>
 
         <TextView
+            android:id="@+id/item_myBillList_tv_goodsNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="×1"
@@ -73,7 +77,7 @@
             android:textColor="@color/text6"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/dp_12"
-            android:layout_below="@id/item_want_but_manager_tv_title"
+            android:layout_below="@id/item_myBillList_tv_goodsName"
             android:layout_marginTop="@dimen/dp_13"/>
 
         <View
@@ -97,7 +101,7 @@
             android:layout_marginLeft="@dimen/dp_12"/>
 
         <TextView
-            android:id="@+id/item_want_but_manager_tv_total"
+            android:id="@+id/item_myBillList_tv_orderNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100斤"
@@ -112,7 +116,7 @@
             android:layout_height="wrap_content"
             android:text="总金额"
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_toRightOf="@id/item_want_but_manager_tv_total"
+            android:layout_toRightOf="@id/item_myBillList_tv_orderNum"
             android:layout_marginTop="@dimen/dp_3"
             android:textColor="@color/text3"
             android:textSize="@dimen/sp_14"/>
@@ -126,7 +130,7 @@
             android:textColor="@color/text6"
             android:textSize="@dimen/sp_14"/>
         <TextView
-            android:id="@+id/item_want_but_manager_tv_price"
+            android:id="@+id/item_myBillList_tv_orderPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥260元"
@@ -146,7 +150,7 @@
             android:layout_marginRight="@dimen/dp_12">
 
             <Button
-                android:id="@+id/item_want_but_manager_btn_cancle"
+                android:id="@+id/item_myBillList_btn_cancle"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
                 android:layout_marginRight="@dimen/dp_12"
@@ -156,7 +160,7 @@
                 android:textSize="@dimen/sp_14"/>
 
             <Button
-                android:id="@+id/item_want_but_manager_list_btn_delete"
+                android:id="@+id/item_myBillList_btn_delete"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
                 android:layout_marginRight="@dimen/dp_12"
@@ -165,7 +169,7 @@
                 android:textColor="@color/text6"
                 android:textSize="@dimen/sp_14"/>
             <Button
-                android:id="@+id/item_want_but_manager_list_btn_cuidan"
+                android:id="@+id/item_myBillList_btn_cuidan"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
                 android:background="@drawable/stroke_theme_5"
@@ -174,13 +178,63 @@
                 android:textColor="@color/app_theme"
                 android:textSize="@dimen/sp_14"/>
             <Button
-                android:id="@+id/item_want_but_manager_list_btn_pay"
+                android:id="@+id/item_myBillList_btn_pay"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
                 android:background="@drawable/stroke_theme_5"
                 android:text="去支付"
                 android:textColor="@color/app_theme"
                 android:textSize="@dimen/sp_14"/>
+            <Button
+                android:id="@+id/item_myBillList_btn_query"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
+                android:background="@drawable/stroke_zise_5"
+                android:text="查询物流"
+                android:textColor="@color/text6"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/item_myBillList_btn_confirm"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
+                android:background="@drawable/stroke_theme_5"
+                android:text="确认收货"
+                android:textColor="@color/app_theme"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/item_myBillList_btn_again"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
+                android:background="@drawable/stroke_theme_5"
+                android:text="再来一单"
+                android:textColor="@color/app_theme"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/item_myBillList_btn_comment"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
+                android:background="@drawable/stroke_zise_5"
+                android:text="评价"
+                android:textColor="@color/text6"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/item_myBillList_btn_goodsReturn"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
+                android:background="@drawable/stroke_zise_5"
+                android:text="退货"
+                android:textColor="@color/text6"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
         </LinearLayout>
     </RelativeLayout>
 
