--- a/app/src/main/res/layout/activity_pre_sell.xml
+++ b/app/src/main/res/layout/activity_pre_sell.xml
@@ -13,7 +13,7 @@
         android:id="@+id/at_pre_sell_iv"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_141"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/presell_top"/>
 
     <LinearLayout
         android:layout_width="@dimen/dp_175"
