--- a/app/src/main/res/layout/activity_classfiy.xml
+++ b/app/src/main/res/layout/activity_classfiy.xml
@@ -69,22 +69,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
                 <ListView
                     android:id="@+id/at_classfiy_lv_home"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </LinearLayout>
-
             <TextView
                 android:id="@+id/at_classfiy_tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:background="@android:color/white"
                 android:gravity="center_vertical"
-                android:paddingLeft="20dp"
-                android:text="hello_world" />
-
+                android:textColor="@color/text3"
+                android:textSize="@dimen/sp_14"
+                android:paddingLeft="10dp"/>
         </RelativeLayout>
     </LinearLayout>
 
