--- a/app/src/main/res/layout/activity_classfiy_detail.xml
+++ b/app/src/main/res/layout/activity_classfiy_detail.xml
@@ -7,27 +7,7 @@
     android:orientation="vertical"
     android:background="@color/background">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        android:background="@android:color/white">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="西门子"
-            android:textColor="@color/text3"
-            android:textSize="@dimen/sp_18"
-            android:layout_centerInParent="true"/>
-        
-        <ImageView
-            android:layout_width="@dimen/dp_22"
-            android:layout_height="@dimen/dp_22"
-            android:layout_centerVertical="true"
-            android:src="@drawable/back"
-            android:layout_marginLeft="@dimen/dp_5"/>
-
-    </RelativeLayout>
+    <include layout="@layout/title"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/at_classfiy_detail_rv"
