--- a/app/src/main/res/layout/activity_my_supply.xml
+++ b/app/src/main/res/layout/activity_my_supply.xml
@@ -17,11 +17,13 @@
             layout="@layout/title_theme"></include>
         
         <com.zthx.npj.view.MyCircleView
+            android:id="@+id/ac_mySupply_mcv_headImg"
             android:layout_width="@dimen/dp_70"
             android:layout_height="@dimen/dp_70"
             android:src="@mipmap/ic_launcher"/>
 
         <TextView
+            android:id="@+id/ac_mySupply_tv_nickName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="闭眼看世界"
@@ -29,6 +31,7 @@
             android:textColor="@android:color/white"
             android:layout_marginTop="@dimen/dp_10"/>
         <TextView
+            android:id="@+id/ac_mySupply_tv_reputation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="信誉分：15312"
