--- a/app/src/main/res/layout/item_classfiy_detail_goods.xml
+++ b/app/src/main/res/layout/item_classfiy_detail_goods.xml
@@ -4,12 +4,13 @@
     android:layout_width="@dimen/dp_170"
     android:layout_height="@dimen/dp_248"
     android:orientation="vertical"
+    android:layout_marginLeft="@dimen/dp_10"
     android:background="@drawable/white_conner"
     android:layout_marginTop="@dimen/dp_10">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_200">
+        android:layout_height="@dimen/dp_180">
         <ImageView
             android:id="@+id/item_iv_classfiy_detail_goods"
             android:layout_width="match_parent"
@@ -52,6 +53,7 @@
             android:id="@+id/item_tv_classfiy_detail_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
             android:text="限量首发"
             android:textSize="@dimen/sp_12"
             android:textColor="@color/text6"/>
@@ -61,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥188"
-            android:textSize="@dimen/sp_12"
+            android:textSize="@dimen/sp_15"
             android:layout_marginLeft="@dimen/dp_2"
             android:layout_toRightOf="@id/item_tv_classfiy_detail_text"
             android:textColor="@color/app_theme"/>
@@ -74,6 +76,7 @@
             android:textSize="@dimen/sp_12"
             android:textColor="@color/text6"
             android:layout_marginRight="@dimen/dp_28"
+            android:textStyle="italic"
             android:text="200"/>
 
     </RelativeLayout>
