--- a/app/src/main/res/layout/item_my_bill_list.xml
+++ b/app/src/main/res/layout/item_my_bill_list.xml
@@ -5,7 +5,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@android:color/white">
-    
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/line"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40">
