--- a/app/src/main/res/layout/activity_classfiy.xml
+++ b/app/src/main/res/layout/activity_classfiy.xml
@@ -66,15 +66,19 @@
             android:layout_weight="3"
             android:background="@android:color/white">
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <ListView
                     android:id="@+id/at_classfiy_lv_home"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-            </LinearLayout>
-            <TextView
+            </LinearLayout>-->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ac_classify_rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <!--<TextView
                 android:id="@+id/at_classfiy_tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
@@ -82,7 +86,7 @@
                 android:gravity="center_vertical"
                 android:textColor="@color/text3"
                 android:textSize="@dimen/sp_14"
-                android:paddingLeft="10dp"/>
+                android:paddingLeft="10dp"/>-->
         </RelativeLayout>
     </LinearLayout>
 
