--- a/app/src/main/res/layout/activity_pulish_goods.xml
+++ b/app/src/main/res/layout/activity_pulish_goods.xml
@@ -203,6 +203,7 @@
                     android:textSize="@dimen/sp_13"/>
 
                 <ImageView
+                    android:id="@+id/ac_publishGoods_iv_hint1"
                     android:layout_width="@dimen/dp_20"
                     android:layout_height="@dimen/dp_20"
                     android:src="@drawable/help"
@@ -244,6 +245,7 @@
                     android:textSize="@dimen/sp_13"/>
 
                 <ImageView
+                    android:id="@+id/ac_publishGoods_iv_hint2"
                     android:layout_width="@dimen/dp_20"
                     android:layout_height="@dimen/dp_20"
                     android:src="@drawable/help"
@@ -285,6 +287,7 @@
                     android:textSize="@dimen/sp_13"/>
 
                 <ImageView
+                    android:id="@+id/ac_publishGoods_iv_hint3"
                     android:layout_width="@dimen/dp_20"
                     android:layout_height="@dimen/dp_20"
                     android:src="@drawable/help"
