--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -554,6 +554,7 @@
             android:orientation="horizontal"
             android:background="@android:color/white">
             <LinearLayout
+                android:id="@+id/ac_goodsDetail_ll_store"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
