--- a/app/src/main/res/layout/activity_my_store.xml
+++ b/app/src/main/res/layout/activity_my_store.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <include
-            layout="@layout/title" ></include>
+            layout="@layout/title_theme" ></include>
         <com.zthx.npj.view.MyCircleView
             android:id="@+id/ac_myStore_mcv_storeImg"
             android:layout_width="@dimen/dp_70"
