--- a/app/src/main/res/layout/popupwindow_store_edit.xml
+++ b/app/src/main/res/layout/popupwindow_store_edit.xml
@@ -5,12 +5,23 @@
     android:layout_height="@dimen/dp_306"
     android:background="@drawable/popwindow_supply_products_bg"
     android:orientation="vertical">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_30">
+        <ImageView
+            android:id="@+id/pw_storeEdit_iv_diss"
+            android:layout_width="@dimen/dp_22"
+            android:layout_height="@dimen/dp_22"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_5"
+            android:src="@drawable/pop_goods_detail_size_delete"/>
+    </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:layout_marginTop="@dimen/dp_33">
+        android:layout_marginTop="@dimen/dp_13">
 
         <TextView
             android:layout_width="wrap_content"
