--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="text9">#999999</color>
 
     <color name="base_texthint">#999999</color>
+    <color name="dialog_bg">#F1F0F0</color>
+    <color name="white">#FFFFFF</color>
 </resources>
