--- a/app/src/main/res/layout/activity_goods_search.xml
+++ b/app/src/main/res/layout/activity_goods_search.xml
@@ -26,7 +26,7 @@
             android:layout_width="@dimen/dp_245"
             android:layout_height="@dimen/dp_29"
             android:layout_centerVertical="true"
-            android:background="@drawable/gray_conner"
+            android:background="@drawable/stroke_gray_10"
             android:layout_toRightOf="@id/at_home_search_iv_back"
             android:layout_marginLeft="@dimen/dp_38"
             android:hint="搜索你想要的产品"
@@ -53,56 +53,62 @@
             android:textSize="@dimen/sp_12"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/dp_12"/>
-
     </RelativeLayout>
-
     <LinearLayout
-        android:id="@+id/ac_homeSearch_ll1"
+        android:id="@+id/ac_homeSearch_ll2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_22">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="搜索历史"
-                android:textSize="@dimen/sp_12"
-                android:textColor="@color/text9"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp_12" />
-
-            <ImageView
-                android:id="@+id/ac_homeSearch_iv_delHistory"
-                android:layout_width="22dp"
-                android:layout_height="@dimen/dp_22"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/home_search_delete"
-                android:layout_marginRight="@dimen/dp_9"/>
-        </RelativeLayout>
-
+            android:layout_height="@dimen/dp_40"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="推荐" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="销量"/>
+                <ImageView
+                    android:layout_width="@dimen/dp_10"
+                    android:layout_height="@dimen/dp_6"
+                    android:src="@drawable/xiala_zhishi2"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="销量"/>
+                <ImageView
+                    android:layout_width="@dimen/dp_10"
+                    android:layout_height="@dimen/dp_6"
+                    android:src="@drawable/xiala_zhishi2"/>
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:background="@color/background"/>
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/ac_homeSearch_rv_history"
+            android:id="@+id/at_home_search_rv_result"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_22"
-            android:layout_marginTop="@dimen/dp_22">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="热门搜索"
-                android:textSize="@dimen/sp_12"
-                android:textColor="@color/text9"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp_12" />
-        </RelativeLayout>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/ac_homeSearch_rv_hot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"/>
     </LinearLayout>
 </LinearLayout>
