--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,6 @@
     android:orientation="vertical"
     tools:context=".ui.fragment.HomeFragment"
     android:background="@color/background">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,13 +46,26 @@
                 android:hint="请输入您想要的内容"
                 android:textSize="@dimen/sp_15" />
         </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/fg_home_iv_classify"
-            android:layout_width="@dimen/dp_22"
-            android:layout_height="@dimen/dp_22"
-            android:src="@drawable/home_kind"
-            android:layout_marginLeft="@dimen/dp_10"/>
+        <LinearLayout
+            android:id="@+id/fg_home_ll_classify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="@dimen/dp_22"
+                android:layout_height="@dimen/dp_22"
+                android:src="@drawable/home_kind"/>
+            <TextView
+                android:layout_width="@dimen/dp_23"
+                android:layout_height="@dimen/dp_12"
+                android:text="分类"
+                android:layout_marginTop="@dimen/dp_2"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/sp_10"
+                android:textColor="@color/white"/>
+        </LinearLayout>
         <ImageView
             android:id="@+id/fg_home_iv_message"
             android:layout_width="@dimen/dp_22"
@@ -70,12 +82,34 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:descendantFocusability="blocksDescendants">
-
-            <com.youth.banner.Banner
-                android:id="@+id/banner"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_188" />
-
+                android:layout_height="wrap_content">
+                <com.youth.banner.Banner
+                    android:id="@+id/banner"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_188" />
+                <LinearLayout
+                    android:layout_width="@dimen/dp_150"
+                    android:layout_height="@dimen/dp_15"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:background="@drawable/gray_conner"
+                    android:orientation="horizontal">
+                    <com.zthx.npj.view.MyCircleView
+                        android:id="@+id/fg_home_mcv_headImg"
+                        android:layout_width="@dimen/dp_15"
+                        android:layout_height="@dimen/dp_15"
+                        android:src="@drawable/logo"/>
+                    <TextView
+                        android:id="@+id/fg_home_tv_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/dp_10"
+                        android:layout_gravity="center_vertical"
+                        android:text="恭喜一诺千金下单成功"/>
+                </LinearLayout>
+            </RelativeLayout>
             <LinearLayout
                 android:layout_width="@dimen/dp_351"
                 android:layout_height="@dimen/dp_68"
